[gd_scene load_steps=24 format=3 uid="uid://vx8qnbcmqaja"]

[ext_resource type="AudioStream" uid="uid://bgu0fccgfbqta" path="res://Audio/SFX/misc/menu button down.mp3" id="1_eoxc6"]
[ext_resource type="Script" uid="uid://bkgc4omcr0b38" path="res://Misc/audio_manager/audio_manager.gd" id="1_tjl6i"]
[ext_resource type="AudioStream" uid="uid://celg4d4relx3p" path="res://Audio/SFX/misc/enemy_death_1.mp3" id="2_541kk"]
[ext_resource type="AudioStream" uid="uid://baupph2381qt3" path="res://Audio/SFX/misc/buy1.mp3" id="2_oeafg"]
[ext_resource type="AudioStream" uid="uid://cb0iiqvnook7m" path="res://Audio/SFX/misc/menu button up.mp3" id="2_tjl6i"]
[ext_resource type="AudioStream" uid="uid://cb5nv5lfiubg0" path="res://Audio/SFX/misc/enemy_death_2.mp3" id="3_l0luo"]
[ext_resource type="AudioStream" uid="uid://d0vg3lpp1es3a" path="res://Audio/SFX/misc/buy2.mp3" id="3_vqqbq"]
[ext_resource type="AudioStream" uid="uid://csae5dvdgmns6" path="res://Audio/SFX/player/player_death.mp3" id="6_q40tu"]
[ext_resource type="AudioStream" uid="uid://chvy4svw3rmw0" path="res://Audio/Music/01 - U.N. Owen Was Her.mp3" id="6_qcdol"]
[ext_resource type="AudioStream" uid="uid://bs5iq7qbcmct8" path="res://Audio/Music/main_menu.mp3" id="6_vqqbq"]
[ext_resource type="AudioStream" uid="uid://jxcv5xfhdka0" path="res://Audio/Music/02 - Nuclear Fusion.mp3" id="7_kq5r2"]
[ext_resource type="AudioStream" uid="uid://bcmsqwba3771" path="res://Audio/Music/03 - Lunar Clock Luna Dial (feat. James Fraser).mp3" id="8_q40tu"]
[ext_resource type="AudioStream" uid="uid://bofwd8cwsq0sv" path="res://Audio/Music/04 - Lunatic Princess.mp3" id="9_84pmh"]
[ext_resource type="AudioStream" uid="uid://dvbvd1yks0s6" path="res://Audio/Music/05 - Flowering Night.mp3" id="10_541kk"]
[ext_resource type="AudioStream" uid="uid://dhtvjgvchqa1y" path="res://Audio/Music/06 - Native Faith.mp3" id="11_l0luo"]
[ext_resource type="AudioStream" uid="uid://cnwl3ms6x2qrw" path="res://Audio/Music/07 - Septette for the Dead Princess (feat. Jonathan Parecki).mp3" id="12_nnd8a"]
[ext_resource type="AudioStream" uid="uid://diwu3q3f8f7fv" path="res://Audio/Music/08 - Reach for the Moon, Immortal Smoke (feat. Alejandro Hernández).mp3" id="13_jmgit"]
[ext_resource type="AudioStream" uid="uid://c4u1x7jjvj3l2" path="res://Audio/Music/09 - Beloved Tomboyish Daughter.mp3" id="14_mrwof"]
[ext_resource type="AudioStream" uid="uid://cti1bk4nb3wx4" path="res://Audio/Music/10 - Necrofantasia.mp3" id="15_k3iyu"]
[ext_resource type="AudioStream" uid="uid://b8viiyfqjf81h" path="res://Audio/Music/11 - Love Coloured Master Spark.mp3" id="16_6sljd"]
[ext_resource type="AudioStream" uid="uid://mvaxvekymvr0" path="res://Audio/Music/12 - Primoridal Beat (feat. Jerod Collins).mp3" id="17_6ycmn"]
[ext_resource type="AudioStream" uid="uid://iwtf8qkd2s51" path="res://Audio/Music/13 - Border of Life.mp3" id="18_jjf00"]
[ext_resource type="AudioStream" uid="uid://c2blv5cte2p4p" path="res://Audio/Music/shop&dungeon.mp3" id="20_kq5r2"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_tjl6i")

[node name="EnemyDeath1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_541kk")

[node name="EnemyDeath2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_l0luo")

[node name="Buy1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oeafg")
volume_db = -15.0

[node name="Buy2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vqqbq")
volume_db = -15.0

[node name="MenuButtonDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_eoxc6")

[node name="MenuButtonUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tjl6i")

[node name="PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q40tu")

[node name="music" type="Node" parent="."]

[node name="01-U_n_OwenWasHer" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("6_qcdol")
bus = &"Music"

[node name="02-NuclearFusion" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("7_kq5r2")
bus = &"Music"

[node name="03-LunarClockLunaDial(feat_JamesFraser)" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("8_q40tu")
bus = &"Music"

[node name="04-LunaticPrincess" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("9_84pmh")
bus = &"Music"

[node name="05-FloweringNight" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("10_541kk")
bus = &"Music"

[node name="06-NativeFaith" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("11_l0luo")
bus = &"Music"

[node name="07-SeptetteForTheDeadPrincess(feat_JonathanParecki)" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("12_nnd8a")
bus = &"Music"

[node name="08-ReachForTheMoon,ImmortalSmoke(feat_AlejandroHernández)" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("13_jmgit")
bus = &"Music"

[node name="09-BelovedTomboyishDaughter" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("14_mrwof")
bus = &"Music"

[node name="10-Necrofantasia" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("15_k3iyu")
bus = &"Music"

[node name="11-LoveColouredMasterSpark" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("16_6sljd")
bus = &"Music"

[node name="12-PrimoridalBeat(feat_JerodCollins)" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("17_6ycmn")
bus = &"Music"

[node name="13-BorderOfLife" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("18_jjf00")
bus = &"Music"

[node name="MainMenu" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("6_vqqbq")
volume_db = -20.0
bus = &"Music"
parameters/looping = true

[node name="Shop&dungeon" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("20_kq5r2")
bus = &"Music"
parameters/looping = true
